--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,127 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.nav {
+  background: black;
+  height: 70px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-container input {
+  height: 43px;
+  width: 600px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border: none;
+  font-size: 17px;
+  padding: 0 10px;
+}
+
+#search-btn {
+  width: 3.5rem;
+  height: 43px;
+  border: none;
+}
+
+#search-btn:hover {
+  cursor: pointer;
+  background: #e1e1e1;
+}
+
+.main {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 0 20px;
+}
+
+.main .tabs{
+  display: flex;
+  font-size: 20px;
+}
+
+.main .tabs .tab {
+  background: #fff;
+  padding: 10px;
+  margin-right: 13px;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px 1px #d4d4d5, 0 0 0 1px #f1f1f1;
+  border: 1px solid #e1e1e1;
+}
+
+.main .tabs .tab:hover {
+  cursor: pointer;
+  background: #e1e1e1;
+}
+
+.movie-card {
+  background: #fff;
+  padding: 0;
+  border: none;
+  border-radius: 3px;
+  display: flex;
+}
+
+.movie-card:not(:first-child) {
+  margin-top: 20px;
+}
+
+.movie-card:last-child {
+  margin-bottom: 50px;
+}
+
+/* .movie-card .left {
+  flex: 1;
+} */
+
+.movie-card .left img {
+  height: 250px;
+}
+
+/* .movie-card .right {
+  position: relative;
+  flex: 10;
+} */
+
+.movie-card .title {
+  padding: 10px 20px;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+.movie-card .plot {
+  margin-top: 20px;
+  padding: 0 20px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+.footer .rating {
+  font-size: 20px;
+  font-weight: 600;
+}
+.footer button {
+  font-size: 15px;
+  padding: 7px 10px;
+  text-shadow: none;
+  border-radius: 3px;
+  border: none;
+  font-weight: 600;
+}
+
+.favorite-btn {
+  background-color: #2185d0;
+  color: #fff;
+}
+
+
+
